<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minHeight="@dimen/drawer_main_left_user_minHeight"
    android:padding="@dimen/pad_10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_10dp"
        android:text="@string/drawer_main_left_user_title"
        android:textSize="@dimen/txt_20sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/drawer_main_left_user_menu_minHeight"
        android:padding="@dimen/pad_2dp"
        tools:ignore="DisableBaselineAlignment" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/pad_5dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <ImageButton
                android:id="@+id/drawer_main_left_user_img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle"
                android:src="@drawable/ic_default_profile"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/drawer_main_left_user_txt_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/pad_5dp"
                android:textColor="@color/main_color_gray"
                android:text="@string/drawer_main_left_user_txt_join" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/pad_5dp"
            android:layout_weight="7"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_round_linearlayout_black"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="NestedWeights" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/drawer_main_left_user_txt_status"
                    tools:ignore="NestedWeights" />

                <Spinner
                    android:id="@+id/drawer_main_left_user_spinner_status"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/pad_zero_point_1"
                    android:layout_weight="5"
                    android:background="@drawable/shape_round_button"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_round_linearlayout_black"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/drawer_main_left_user_txt_alarm" />

                <Button
                    android:id="@+id/drawer_main_left_user_btn_alarm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/pad_zero_point_1"
                    android:text="@string/drawer_main_left_user_btn_alarm_default"
                    android:textColor="@color/text_gray"
                    android:layout_weight="5"
                    android:background="@drawable/shape_round_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/shape_round_linearlayout_black"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/drawer_main_left_user_txt_safetyzone" />

                <ImageButton
                    android:id="@+id/drawer_main_left_user_img_safetyzone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/pad_zero_point_1"
                    android:layout_weight="5"
                    android:background="@drawable/shape_round_button"
                    android:src="@drawable/ic_safetyzone"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>