<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minHeight="@dimen/drawer_main_left_with_minHeight"
    android:padding="@dimen/pad_10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_10dp"
        android:text="@string/drawer_main_left_with_title"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/pad_2dp"
        android:layout_weight="1"
        android:background="@drawable/shape_round_linearlayout_black"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:text="@string/drawer_main_left_with_txt_propose" />

        <ImageButton
            android:id="@+id/drawer_main_left_with_propose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad_1dp"
            android:layout_weight="3"
            android:background="@drawable/shape_round_button"
            android:src="@drawable/ic_with_propose"
            android:textColor="@color/text_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/pad_2dp"
        android:layout_weight="1"
        android:background="@drawable/shape_round_linearlayout_black"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:text="@string/drawer_main_left_with_txt_share" />

        <ImageButton
            android:id="@+id/drawer_main_left_with_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad_1dp"
            android:layout_weight="3"
            android:background="@drawable/shape_round_button"
            android:src="@drawable/ic_with_share"
            android:textColor="@color/text_gray" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/pad_2dp"
        android:layout_weight="1"
        android:background="@drawable/shape_round_linearlayout_black"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:text="@string/drawer_main_left_with_txt_manual" />

        <ImageButton
            android:id="@+id/drawer_main_left_with_manual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad_1dp"
            android:layout_weight="3"
            android:background="@drawable/shape_round_button"
            android:src="@drawable/ic_with_manual"
            android:textColor="@color/text_gray" />
    </LinearLayout>
    
</LinearLayout>